--- a/loadbalancer/lbfolder/lb.yaml
+++ b/loadbalancer/lbfolder/lb.yaml
@@ -1,1 +1,5 @@
-
+loadbalancerconfiguration:
+  - publicipname: newpublicip
+    allocation_method: Static
+  - publicipname: george
+    allocation_method: Static
